<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="gameResult"
            type="com.niklamix.composition.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.GameFinishedFragment">

        <ImageView
            android:id="@+id/iv_smile"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="40dp"
            app:icSmile="@{gameResult.winner}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_smile" />

        <TextView
            android:id="@+id/tv_required_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            app:requiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_smile"
            tools:text="@string/tv_required_answers"/>

        <TextView
            android:id="@+id/tv_score_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:scoreAnswers="@{gameResult.countOfRightAnswers}"
            app:layout_constraintTop_toBottomOf="@+id/tv_required_answers"
            tools:text="@string/tv_score_answers_text"/>

        <TextView
            android:id="@+id/tv_percent_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:percentAnswers="@{gameResult.gameSettings.minPercentOfRightAnswer}"
            app:layout_constraintTop_toBottomOf="@+id/tv_score_answers"
            tools:text="@string/tv_percent_answers_text"/>

        <TextView
            android:id="@+id/tv_percent_right_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:percentRightAnswers="@{gameResult}"
            app:layout_constraintTop_toBottomOf="@+id/tv_percent_answers"
            tools:text="@string/tv_percent_right_answers_text"/>

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/btn_try_again_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>